WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161840
HTMLTrackElement.kind's invalid value default should be the metadata state
https://bugs.webkit.org/show_bug.cgi?id=161840
Summary
HTMLTrackElement.kind's invalid value default should be the metadata state
Chris Dumez
Reported
2016-09-10 09:03:28 PDT
HTMLTrackElement.kind's invalid value default should be the metadata state, not the subtitles state: -
https://html.spec.whatwg.org/#attr-track-kind
Chrome agrees with the specification.
Attachments
Patch
(26.64 KB, patch)
2016-09-10 09:06 PDT
,
Chris Dumez
eric.carlson
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews121 for ios-simulator-elcapitan-wk2
(9.66 MB, application/zip)
2016-09-10 10:17 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-09-10 09:06:22 PDT
Created
attachment 288487
[details]
Patch
Build Bot
Comment 2
2016-09-10 10:17:04 PDT
Comment on
attachment 288487
[details]
Patch
Attachment 288487
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/2048253
New failing tests: imported/w3c/web-platform-tests/html/dom/reflection-embedded.html
Build Bot
Comment 3
2016-09-10 10:17:08 PDT
Created
attachment 288488
[details]
Archive of layout-test-results from ews121 for ios-simulator-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-elcapitan-wk2 Platform: Mac OS X 10.11.5
Chris Dumez
Comment 4
2016-09-11 15:32:12 PDT
Committed
r205791
: <
http://trac.webkit.org/changeset/205791
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug