HTMLTrackElement.kind's invalid value default should be the metadata state https://bugs.webkit.org/show_bug.cgi?id=161840

Reviewed by Eric Carlson.

LayoutTests/imported/w3c:

Rebaseline existing tests now that more checks are passing.

* web-platform-tests/html/dom/reflection-embedded-expected.txt:
* web-platform-tests/html/semantics/embedded-content/media-elements/interfaces/HTMLElement/HTMLTrackElement/kind-expected.txt:
* web-platform-tests/html/semantics/embedded-content/media-elements/interfaces/TextTrack/kind-expected.txt:

Source/WebCore:

HTMLTrackElement.kind's invalid value default should be the metadata state,
not the subtitles state:
- https://html.spec.whatwg.org/#attr-track-kind

Chrome agrees with the specification.

No new tests, rebaselined existing tests.

* html/track/TextTrack.cpp:
(WebCore::TextTrack::setKindKeywordIgnoringASCIICase):

LayoutTests:

* media/track/track-kind-expected.txt:
* media/track/track-kind.html:
Update existing test to reflect behavior change.

* media/track/w3c/interfaces/TextTrack/kind.html:
Re-sync test from W3C as it was outdated.

Canonical link: https://commits.webkit.org/180004@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205791 268f45cc-cd09-0410-ab3c-d52691b4dbfc